src/objects/Reply__c.object
<CustomObject>
    <description>COMPLIANCE SURVEY Stores all the answers for a compliance survey</description>
    <fields>
        <fullName>Compliance_Response__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compliance Response</label>
        <referenceTo>Response__c</referenceTo>
        <relationshipName>Replies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Describe__c</fullName>
        <label>Describe</label>
        <length>10768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipName>Reply</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reply__c</fullName>
        <label>Reply</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>TMN_User__c</referenceTo>
        <relationshipName>Replies</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Compliance Reply</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000000}</displayFormat>
        <label>Compliance Reply Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Replies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>